objects/APTS_BAL_PL_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>APTS_App_Name__c</fullName>
        <label>App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App</label>
        <referenceTo>Apttus_XApps__Application__c</referenceTo>
        <relationshipLabel>BAL-PL Mappings</relationshipLabel>
        <relationshipName>BAL_PL_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_BAL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BAL</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>BAL-PL Mappings</relationshipLabel>
        <relationshipName>BAL_PL_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>BAL-PL Mappings</relationshipLabel>
        <relationshipName>BAL_PL_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BAL-PL Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_BAL__c</columns>
        <columns>APTS_Price_List__c</columns>
        <columns>APTS_App__c</columns>
        <columns>APTS_App_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPM-{0000000000}</displayFormat>
        <label>BAL-PL Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BAL-PL Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>